vagrant/kind/kustomize/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: webserver-service
  namespace: default
spec:
  selector:
    app: echo-server
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
